test/integration/semantic/operations.pal
{15}
{
    Test that operations work
}
program test(input, output);
var
	i : integer;
	b : boolean;
	r : real;
begin
	// unary plus
	
	r := +r;
	r := +i;
	i := +r;	// error
	i := +i;
	
end.
